<resources>
    <string name="app_name">CalculatorAssignment</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="multiply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="divide">/</string>
    <string name="history">History</string>
    <string name="ce">CE</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email_or_mobile_no">User Name</string>
    <string name="experience_no_hassle">Experience no hassle</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="sign_up"><u>Sing Up</u></string>
    <string name="new_user">New user?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_registered_email">Enter your registered email.</string>
    <string name="sign_in">Sign In</string>
</resources>