<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text=""
            android:layout_marginTop="40sp"
            android:layout_marginEnd="10sp"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="10sp"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:singleLine="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clear"
                style="@style/ActionButtonStyle"
                android:text="@string/ce" />


            <TextView
                android:id="@+id/tvHistory"
                style="@style/ActionButtonStyle"
                android:text="@string/history" />





            <TextView
                android:id="@+id/actionDivide"
                style="@style/ActionButtonStyle"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNum7"
                style="@style/NumberButtonStyle"
                android:text="@string/_7" />


            <TextView
                android:id="@+id/tvNum8"
                style="@style/NumberButtonStyle"
                android:text="@string/_8" />


            <TextView
                android:id="@+id/tvNum9"
                style="@style/NumberButtonStyle"
                android:text="@string/_9" />


            <TextView
                android:id="@+id/actionMultiply"
                style="@style/ActionButtonStyle"
                android:text="@string/multiply" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNum4"
                style="@style/NumberButtonStyle"
                android:text="@string/_4" />


            <TextView
                android:id="@+id/tvNum5"
                style="@style/NumberButtonStyle"
                android:text="@string/_5" />


            <TextView
                android:id="@+id/tvNum6"
                style="@style/NumberButtonStyle"
                android:text="@string/_6" />


            <TextView
                android:id="@+id/actionMinus"
                style="@style/ActionButtonStyle"
                android:text="@string/minus" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNum1"
                style="@style/NumberButtonStyle"
                android:text="@string/_1" />


            <TextView
                android:id="@+id/tvNum2"
                style="@style/NumberButtonStyle"
                android:text="@string/_2" />


            <TextView
                android:id="@+id/tvNum3"
                style="@style/NumberButtonStyle"
                android:text="@string/_3" />


            <TextView
                android:id="@+id/actionAdd"
                style="@style/ActionButtonStyle"
                android:text="@string/plus" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/tvNum0"
                style="@style/NumberButtonStyle"
                android:layout_weight="2"
                android:text="@string/_0"
                tools:ignore="NestedWeights" />


            <TextView
                android:id="@+id/actionBack"
                style="@style/NumberButtonStyle"
                android:text="@string/back" />


            <TextView
                android:id="@+id/actionEquals"
                style="@style/ActionButtonStyle"
                android:background="@color/colorPrimaryDark"
                android:text="@string/equal" />

        </LinearLayout>


    </LinearLayout>

</layout>
